fix: discount price display unnecessary gap

--- a/src/styles/ui.css
+++ b/src/styles/ui.css
@@ -513,6 +513,7 @@
 
 .ui-post-guides-list-item-price {
     &.discount {
+        display: inline-block;
         text-decoration: line-through;
         opacity: 0.8;
     }
